manifests/ate-install/examples/atenet-gateway-agw-gatewayapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: atenet-gateway
  namespace: ate-system
spec:
  gatewayClassName: agentgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atenet-actors
  namespace: ate-system
spec:
  parentRefs:
  - name: atenet-gateway
  hostnames:
  - "*.actors.resources.substrate.ate.dev"
  rules:
  - backendRefs:
    - name: atenet-dfp
      group: agentgateway.dev
      kind: AgentgatewayBackend
